@@ -24,14 +24,20 @@ repositories {
 dependencies {
 
 	implementation("org.springframework.boot:spring-boot-starter")
+	implementation("org.springframework.boot:spring-boot-starter-amqp")
+	implementation("com.github.rvesse:airline:2.9.0")
 	implementation(project(":modules:jfc-common"))
+	implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.17.0")
+//	implementation("javax.inject:javax.inject:1")
 
 	compileOnly("org.projectlombok:lombok")
 
 	annotationProcessor("org.projectlombok:lombok")
+
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
 }
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+	jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
